# mstats

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
mstats/: __init__.py  _mstats_basic.py  _mstats_extras.py  _vendored.py
mstats/tests/: test_mstats_basic.py  test_mstats_extras.py
