[project]
dependencies = ["scipy>=1.15.2,<2"]
name = "mstats"
maintainers = [
    { name = "SciPy Developers", email = "scipy-dev@python.org" },
]
requires-python = ">= 3.11"
version = "0.1.0.dev0"
readme = "README.md"
license.file = "LICENSE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
scipy = ">=1.15.2,<2"

[tool.pixi.pypi-dependencies]
mstats = { path = ".", editable = true }

[tool.pixi.feature.tests.dependencies]
pytest = "*"

[tool.pixi.feature.tests.tasks]
tests = "pytest -v"

[tool.pixi.feature.scipy-dev.dependencies]
python = ">=3.11,<3.14"

[tool.pixi.feature.scipy-dev.pypi-dependencies]
scipy = { version = "*", index = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple" }

[tool.pixi.environments]
default = { solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }
tests-scipy-dev = { features = ["tests", "scipy-dev"], solve-group = "scipy-dev", no-default-feature = true }
